--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,9 @@ jobs:
       - uses: actions/setup-node@v2.1.4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install serve
+        run: npm install -g serve
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Build release
+        run: serve -s build
