--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,14 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install serve
-        run: sudo npm install -g serve
+        run: npm run build --if-present
 
       # Runs a set of commands using the runners shell
       - name: Build release
         run: sudo serve -s build
+        
+      - name: Archive Artifacts
+        uses: actions/upload-artifact@v2
+        with: 
+          name: Artifacts
+          path: build/** 
