--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,9 @@ jobs:
       - uses: actions/setup-node@v2.1.4
 
       # Runs a single command using the runners shell
-      - name: Install serve
+      - name: Build Relaese
         run: npm run build --if-present
 
-      # Runs a set of commands using the runners shell
-      - name: Build release
-        run: sudo serve -s build
-        
       - name: Archive Artifacts
         uses: actions/upload-artifact@v2
         with: 
