--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/setup-node@v2.1.4
+      
+      - name: Get npm packages
+        run: npm init
 
       # Runs a single command using the runners shell
       - name: Build Relaese
