--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v2.1.4
       
       - name: Get npm packages
-        run: npm init
+        run: npm ci
 
       # Runs a single command using the runners shell
       - name: Build Relaese
